--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,8 +6,8 @@ img{
     width: 20%;
 }
 
-body{
-text-align: center;
+figure{
+    text-align: center;
 }
 
 .container{
@@ -24,6 +24,7 @@ p{
 h1,h2{
     font-family: 'Staatliches', cursive;
     font-size: 3em;
+    text-align: center ;
 }
 
 .video{
@@ -31,4 +32,22 @@ h1,h2{
     text-align: center;
     width: 50%;
     float: left;
+}
+
+footer{
+    background-color: rgb(0,255,255);
+    clear: both;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+}
+
+header{
+
+    background-color: rgb(0,255,255);
+    text-align: center;
+}
+
+footer p{
+
+    text-align: center;
 }
